--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,7 @@ spring.datasource.url= jdbc:postgresql://localhost:5433/licenta
 spring.datasource.username=postgres
 spring.datasource.password=admin
 #spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto =create-drop
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
